
*****

Updated u.ROOT constant to point to the root of the package.

*****

Ensured bm.init() always update the examples folder.
Removed obsolete bm.loadfile2().

*****

Added bm.init() call after python setup.py install/develop calls.

*****

Added exception to bm.load() to return an empty list when there
is no bibmanager database.

*****

Added examples/ folder with sample bibtex and latex files for demo.

*****

Changed bibfile of sample.tex to avoid conflict with sample.bib.
Updated sphinx docs to add quick example documentation, and note
when other examples use the sample.bib file.

*****

Added dependencies for setup.py.
Fixed bug with setup.py for install call.
Cleaned up setup.py.

*****

Hid sphinx requirements in docs (needed only for development).

*****

Bumped bibmanager version to 0.5.3.
This next merge closes #21

*****

Corrected intentation in bib_manager.py to four spaces.

*****

Rewrote string formatting as f-strings.

*****

Rewrote string formatting as f-strings in __init__.py and __main__.py

*****

Minor cleanup in __init__.py.

*****

Rewrote string formatting as f-strings in utils.py

*****

Rewrote string formatting as f-strings in latex_manager.py

*****

Rewrote string formatting as f-strings in config_manager.py

*****

Added try-except clause in cli_config() to avoid throwing traceback
at user.

*****

Bumped bibmanager version to 0.5.4.
This next merge closes #5
(Did my best to throw specific errors in API, and catch them to
avoid throwing tracebacks at user).


*****  Thu Jan 10 13:47:49 CET 2019  *****

Fixed bug in bm.init(), set the right order: create HOME folder,
reset config, reset database.
Removed obsolete None-check for loadfile().
Fixed bug with pygments style (get it on execution rather than during
import).

*****

Added ignored context manager for bm.init() calls in develop/install.

*****

Fixed error message in am.add_bibtex() for invalid ADS token.

*****

Bumped bibmanager version to 0.5.5.

*****
