@@ -759,5 +759,12 @@ Fixed error message in am.add_bibtex() for invalid ADS token.
 
 Bumped bibmanager version to 0.5.5.
 
+
+*****  Fr 11. Jan 16:11:43 CET 2019  *****
+
+Changed ROOT (again) to point to location of bibmanager/__init__.py
+(Will need to update in utils.py once I set the package structure).
+PS: This commit breaks untill I fix setup.py
+
 *****
 
